--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -75,7 +75,7 @@ nav a{
     margin: 130px 0px;
 }
 .section-title{
-    color: rgba(15, 2, 2, 0.623);
+    color: rgba(2, 31, 92, 0.623);
     text-align: center;
     font-size: 35px;
     font-weight: bold;
@@ -84,4 +84,60 @@ nav a{
     color: rgb(59, 38, 13);
     text-align: center;
     font-size: 18px;
+   font-weight: bold;
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-inf{
+    text-align: center;
+}
+.info-title{
+    text-align: center;
+    color: darkblue;
+    font-family: sans-serif;
+}
+.info-description{
+    color: rgb(94, 3, 180);
+    font-size: large;
+    font-weight: bold;
+}
+#what-i-do-descrip{
+    padding: 30px 150px;
+}
+.das{
+    background-color: rgb(231, 231, 231);
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px;
+   
+}
+.main section{
+    margin-top: 130px;
+}
+.section-tittle{
+    color: rgba(2, 31, 92, 0.623);
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 15px;
+}
+.resume-column-title{
+    color: rgba(0, 0, 0, 0.986);
+    font-size: 30px;
+    font-weight: 700;
+
+}
+ 
+
