--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -127,7 +127,7 @@ main{
     margin-top: 130px;
 }
 .section-tittle{
-    color: rgba(2, 31, 92, 0.623);
+    color: rgba(31, 9, 51, 0.582);
     text-align: center;
     font-size: 35px;
     font-weight: bold;
@@ -139,5 +139,47 @@ main{
     font-weight: 700;
 
 }
- 
+.resume-cotainer{
+    display: flex;
+    gap: 55px;
+}
+.resume-column-title{
+   color: rgb(187, 21, 21);
+}
+.resume-item-title{
+    color: rgb(17, 147, 151);
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-description{
+    color: rgb(33, 15, 49);
+    font-weight: 400;
+}
+.resume-cotainer hr{
+    margin: 30px 15px;
+}
+.resume-item-institue{
+    margin-bottom: 10px;
+    margin-top: 0px;
+    color: rgb(0, 0, 0);
+    
+}
+
+    
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+.btn-second{
+    background-color: rgba(5, 1, 1, 0.719);
+    border-radius: 5px  ;
+    border: 0;
+    color: rgba(16, 1, 58, 0.747);
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px 35px;
+    margin: 5px;
+}
 
