--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -173,7 +173,7 @@ main{
     margin-top: 50px;
 }
 .btn-second{
-    background-color: rgba(5, 1, 1, 0.719);
+    background-color: rgba(179, 164, 164, 0.719);
     border-radius: 5px  ;
     border: 0;
     color: rgba(16, 1, 58, 0.747);
@@ -182,4 +182,43 @@ main{
     padding: 15px 35px;
     margin: 5px;
 }
+.social-links a{
+    
+    
+    margin-right: 25px;
+}
+footer{
+    display: flex;
+    gap: 100px;
+    background-color: rgba(193, 206, 176, 0.664);
+    padding: 130px 200px;
+    margin-top: 100px;
+    
+}
+.footer-column{
+    width: 50%;
+}
 
+.contact input,textarea {
+        display: block;
+        margin-bottom: 25px;
+        padding: 18px 35px;
+        border: 0px;
+        border-radius: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        width: 80%;
+        
+
+}
+.btn-thrd{
+    background-color: rgba(199, 144, 144, 0.719);
+    border-radius: 5px  ;
+    border: 0;
+    color: rgba(60, 0, 240, 0.747);
+    font-size: 30px;
+    font-weight: bold;
+    padding: 15px 35px;
+    margin: 5px
+
+}
